--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
 	    <spring.version>4.1.4.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-	 	<sonar.host.url>http://localhost:9000/</sonar.host.url>
+	 	<sonar.host.url>http://13.127.145.5:9000/</sonar.host.url>
+	  <sonar.login>a6035ba4e4ffd0cb6e522740c7294b0f7d706a66</sonar.login>	  
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
