--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,37 @@
 			<version>${spring.version}</version>
 		</dependency>
   </dependencies>
+	
+	
+	
+	
+	
+	
+	
+	<distributionManagement>
+	
+	    <repository>
+	      <id>nexus</id>
+	      <name>Mithun Technologies Releases Nexus Repository</name>
+	      <url>http://13.233.147.95:8081/repository/amazon-release/</url>
+	    </repository>
+	    
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>Mithun Technologies Snapshot Nexus Repository </name>
+	      <url>http://13.233.147.95:8081/repository/amazon-snapshot/</url>
+	    </snapshotRepository>
+	    
+	</distributionManagement>
+	
+	
+	
+	
+	
+	
+	
+	
+	
 
    <profiles>
         <profile>
